test-suite/invalid/syntax/invalid-surrogate-pair.jyml
# Invalid surrogate pair - high surrogate without low surrogate
"invalid": "\uD83D\u0020"